k8s/app/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-crud-svc
spec:
  selector:
    app: crud
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
